lib: Fix Bluetooth 2.1 keyboard pairing

We just forgot to ever show the pairing dialogue. Duh!

https://bugzilla.gnome.org/show_bug.cgi?id=746033